--- a/knightsTour.css
+++ b/knightsTour.css
@@ -45,7 +45,7 @@ body {
 #flavour-text-button {
     width: 20px;
     height: 20px;
-    border: 1px green solid;
+    border: 1px red solid;
     background-color: transparent;
     background-image: url("flavour-icon-plus.png");
     background-position: center;
@@ -54,14 +54,14 @@ body {
 }
 
 #flavour-button-div p {
-    color: green;
+    color: red;
     margin: 0px;
     align-self: flex-start;
     margin-left: 5px;
 }
 
 #flavour-text {
-    color: green;
+    color: red;
     margin: auto;
     padding: 10px;
     width: 95%;
@@ -164,7 +164,7 @@ body {
     position: relative;
     bottom: 1px;
     right: 1px;
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
 }
 
 #speed-icon {
@@ -185,7 +185,6 @@ body {
 }
 
 #tab-div:hover {
-    
     background: linear-gradient(.25turn, rgb(120, 120, 120) 20%, rgb(140, 140, 140));
     transition: 0.2s;
 }
